--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><META http-equiv="Content-Type" content="text/html; charset=utf-8"></head><body>﻿
-	 
+<div><h3>Observation summary can be found <a href="https://docs.google.com/document/d/16WOq_kRuWfNjoLwmNtMpk57axWp31_t_9ng1jvKtPCk/edit">here</a>.</h3></div>	 
 <div><h1>Threat Modeling Report</h1><span>
           Created on 11/8/2017 11:11:05 PM</span><p><strong>Threat Model Name: </strong></p><p><strong>Owner: </strong></p><p><strong>Reviewer: </strong></p><p><strong>Contributors: </strong></p><p><strong>Description: </strong></p><p><strong>Assumptions: </strong></p><p><strong>External Dependencies: </strong></p><br><h3>Threat Model Summary:</h3><table><tr><td>Not Started</td><td>0</td></tr><tr><td>Not Applicable</td><td>6</td></tr><tr><td>Needs Investigation</td><td>16</td></tr><tr><td>Mitigation Implemented</td><td>17</td></tr><tr><td>Total</td><td>39</td></tr><tr><td>Total Migrated</td><td>0</td></tr></table><p><hr><h2>
             Diagram: Diagram 1</h2><img alt="Diagram 1 diagram screenshot
