--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
   <head>
-    <title>Lol</title>
+    <title></title>
   </head>
   <body>
-    <a href="reports/threatModel">Threat Model</a>
-    <a href="reports/retireReport">Retire.js output</a>
-    <a href="reports/snykReport">Snyk output</a>
+    <a href="reports/threatModel">Threat Model</a><br/>
+    <a href="https://docs.google.com/a/unomaha.edu/document/d/1gjV_t7_2cIMLJ03Kn45GF5EW7HwKp0EB2qhYj_8O3d8/edit?usp=sharing">Code analysis for ember-simple-auth</a>
   </body>
 </html>
       
